Add nullius compatibility

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -25,15 +25,19 @@ transfert_controller-device=A device to help precise loading of wagon in a train
 
 [technology-name]
 transfert_controller-device=Transfer control
+nullius-transfert_controller-device=Transfer control
 
 [technology-description]
 transfert_controller-device=Transfer control
+nullius-transfert_controller-device=Transfer control
 
 [recipe-name]
 transfert_controller-device=Building a transfer controller device
+nullius-transfert_controller-device=Building a transfer controller device
 
 [recipe-description]
 transfert_controller-device=Building a transfer controller device
+nullius-transfert_controller-device=Building a transfer controller device
 
 [recipe-category-name]
 
